# canny-cli

./: .gitignore  Cargo.toml  Makefile  install.sh
src/: api.rs  credentials.rs  main.rs  models.rs
