[package]
name = "canny"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for interacting with the Canny API"
authors = ["Your Name"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
colored = "2"
security-framework = "3.2"
